# RepGame

./: .clang-format  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  RepGame.c  RepGame.h  RepGameServer.service  TODO.txt  android.mk  block.c  block.h  block_definitions.c  block_definitions.h  chunk.c  chunk.h  chunk_loader.c  chunk_loader.h  cuda.mk  docker.mk  draw.c  draw.h  draw2d.c  draw2d.h  draw3d.c  draw3d.h  imgui.ini  input.c  input.h  linked_list.c  linked_list.h  linux.mk  map_gen.c  map_gen.h  perlin_noise.c  server.mk  terrain_loading_thread.c  terrain_loading_thread.h  test.c  (+7 more)
android/: .gitignore  .project  build.gradle  gradle.properties
android/app/: .project  CMakeCache.txt  CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/androidTest/java/com/repkap11/repgame/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: fragment.glsl  vertex.glsl
android/app/src/main/cpp/: RepGameAndroid.cpp  input.cpp  native-lib.cpp
android/app/src/main/java/com/repkap11/repgame/: RendererWrapper.java  RepGameActivity.java  RepGameAndroidRenderer.java  RepGameJNIWrapper.java
android/app/src/main/java/com/repkap11/repgame/views/: UIOverlayView.java
android/app/src/main/res/layout/: activity_rep_game.xml
android/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
android/app/src/test/java/com/repkap11/repgame/: ExampleUnitTest.java
flatpak/: com.repkap11.repgame.yml
include/: RepGame.h  RepGame.hpp  binary_blobs.hpp  block.h  block_definitions.h  chunk.h  chunk_loader.h  chunk_loader.hpp  constants.h  constants.hpp  input.h  map_gen.h  map_logic.h  map_storage.h  mouse_selection.h  perlin_noise.h  ray_traversal.h  ray_traversal.hpp  repgame_shaders.hpp  shaders.h  sky_box.hpp  textures.h  ui_overlay.hpp  world.h  world.hpp
lib/: cJSON.c  cJSON.h
makefiles/: android.mk  appimage.mk  common.mk  cuda.mk  docker.mk  entt.mk  flatpak.mk  imgui.mk  install.mk  linux.mk  server.mk  wasm.mk  windows.mk
shaders/: chunk_vertex.glsl  fragment.glsl  shader.fp  shader.vp  sky_box_fragment.glsl  sky_box_vertex.glsl  tess_control.glsl  tess_eval.glsl  ui_overlay_fragment.glsl  ui_overlay_vertex.glsl  vertex.glsl
src/: block.c  (+37 more)
(+224 files in other folders)
